# p2p-over-udp

./: .clang-format  .clang-tidy  .gitignore  .rgignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  final_docs_configuration.md  justfile
docs/: dokumentacja_koncowa.md  dokumentacja_wstepna.md  final-docs.md  final_docs_interface.md  final_docs_test.md  tests_docs.md  usage.md
host1_resources/: genfiles.sh
host2_resources/: hello.txt
src/: main.cpp
src/cli/: Cli.cpp  Cli.h  CliMain.cpp  cli.cpp  cli.h
src/log/: Log.h  log.h
src/network/: BroadcastSender.cpp  BroadcastSender.h  Downloader.cpp  Downloader.h  Header.cpp  Header.h  Listener.cpp  Listener.h  ListenerMain.cpp  Message.cpp  Message.h  Network.cpp  Network.h  SenderMain.cpp  ThreadSafeHashMap.cpp  ThreadSafeHashMap.h  UdpSender.cpp  UdpSender.h  constants.h  network.h
src/resources/: LocalResourceManager.cpp  LocalResourceManager.h  PeerResourceMap.cpp  PeerResourceMap.h  ResourceManager.cpp  ResourceManager.h  ResourceManagerMain.cpp  ResourceMap.cpp  ResourceMap.h  resource.h
src/serialization/: Utils.cpp  Utils.h
src/tests/: ExampleTest.cpp  HeaderTest.cpp  MessageTest.cpp
